completed basic starbucks content for portfolio

--- a/projects/montreal-cityline-illustration.html
+++ b/projects/montreal-cityline-illustration.html
@@ -8,9 +8,13 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Illustration of Montreal's Cityscape by Loogart. Created by Loogart for various cities - coined as a CityLine - such as Toronto, Ottawa, Zurich, New York, Los Angeles, Canada.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta property="og:title" content="CityLines by Loogart">
+    <meta property="og:description" content="llustrations of cityscapes and skylines of various cities.">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/img/cityline-montreal-pink-short.png">
+    <link rel="icon" href="favicon.ico">
 
-    <title>Montreal CityLine Illustration | Loogart</title>
+    <title>CityLine Illustration | Loogart</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -53,7 +57,6 @@
     </nav>
 
     <!-- champion image -->
-    <!--<div class="project-jumbotron project-montreal-cityline-img" data-parallax="scroll" data-image-src="../img/portfolio/cityline-montreal-pink-short.png"></div>-->
     <div class="project-jumbotron project-montreal-cityline-img"></div>
 
     <div class="container-fluid">
@@ -81,55 +84,55 @@
                 <div class="carousel">
                     <div class="montreal-carousel" data-flickity='{ "freeScroll": true }'>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreal.png" alt="montreal-cityline-illustration-by-loogart" title="Montreal Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreal.png" alt="montreal-cityline-illustration-by-loogart" title="Montreal Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-downtown.png" alt="downtown-mtl-cityline-illustration-by-loogart" title="Downtown Montreal Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-downtown.png" alt="downtown-mtl-cityline-illustration-by-loogart" title="Downtown Montreal Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-old-montreal.png" alt="old-montreal-cityline-illustration-by-loogart" title="Old Montreal Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-old-montreal.png" alt="old-montreal-cityline-illustration-by-loogart" title="Old Montreal Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-ville-saint-laurent.png" alt="mtl-ville-saint-laurent-cityline-illustration-by-loogart" title="Ville Saint-Laurent Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-ville-saint-laurent.png" alt="mtl-ville-saint-laurent-cityline-illustration-by-loogart" title="Ville Saint-Laurent Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-cote-des-neiges-ndg.png" alt="mtl-cote-des-neiges-ndg-cityline-illustration-by-loogart" title="Cote-des-Neiges and NDG Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-cote-des-neiges-ndg.png" alt="mtl-cote-des-neiges-ndg-cityline-illustration-by-loogart" title="Cote-des-Neiges and NDG Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-griffintown.png" alt="mtl-griffintown-cityline-illustration-by-loogart" title="Griffintown Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-griffintown.png" alt="mtl-griffintown-cityline-illustration-by-loogart" title="Griffintown Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-saint-henri.png" src="../img/portfolio/cityline-mtl-saint-henri.png" alt="mtl-saint-henri-cityline-illustration-by-loogart" title="Saint-Henri Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-saint-henri.png" src="../img/portfolio/citylines/cityline-mtl-saint-henri.png" alt="mtl-saint-henri-cityline-illustration-by-loogart" title="Saint-Henri Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-plateau.png" src="../img/portfolio/cityline-mtl-plateau.png" alt="mtl-plateau-cityline-illustration-by-loogart" title="Le Plateau Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-plateau.png" src="../img/portfolio/citylines/cityline-mtl-plateau.png" alt="mtl-plateau-cityline-illustration-by-loogart" title="Le Plateau Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-mile-end.png" alt="mtl-mile-end-cityline-illustration-by-loogart" title="Mile-End Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-mile-end.png" alt="mtl-mile-end-cityline-illustration-by-loogart" title="Mile-End Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-outremont.png" alt="mtl-outremont-cityline-illustration-by-loogart" title="Outremont Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-outremont.png" alt="mtl-outremont-cityline-illustration-by-loogart" title="Outremont Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-homa.png" alt="mtl-homa-cityline-illustration-by-loogart" title="Hochellaga-Maisonneuve Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-homa.png" alt="mtl-homa-cityline-illustration-by-loogart" title="Hochellaga-Maisonneuve Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-verdun.png" alt="mtl-verdun-cityline-illustration-by-loogart" title="Verdun Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-verdun.png" alt="mtl-verdun-cityline-illustration-by-loogart" title="Verdun Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-village.png" alt="mtl-village-cityline-illustration-by-loogart" title="Le Village Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-village.png" alt="mtl-village-cityline-illustration-by-loogart" title="Le Village Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-little-italy.png" alt="mtl-litte-italy-cityline-illustration-by-loogart" title="Little-Italy Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-little-italy.png" alt="mtl-litte-italy-cityline-illustration-by-loogart" title="Little-Italy Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-westmount.png" alt="mtl-westmount-cityline-illustration-by-loogart" title="Westmount Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-westmount.png" alt="mtl-westmount-cityline-illustration-by-loogart" title="Westmount Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-milton-park.png" alt="mtl-milton-park-cityline-illustration-by-loogart" title="Milton Park Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-milton-park.png" alt="mtl-milton-park-cityline-illustration-by-loogart" title="Milton Park Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-mtl-west-island.png" alt="mtl-west-island-cityline-illustration-by-loogart" title="West Island Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-mtl-west-island.png" alt="mtl-west-island-cityline-illustration-by-loogart" title="West Island Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell"></div>
                     </div>
@@ -147,28 +150,28 @@
                 <div class="carousel">
                     <div class="montreal-carousel" data-flickity='{ "freeScroll": true }'>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-toronto.png" alt="toronto-cityline-illustration-by-loogart" title="Toronto Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-toronto.png" alt="toronto-cityline-illustration-by-loogart" title="Toronto Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-canada.png" alt="canada-cityline-illustration-by-loogart" title="Canada Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-canada.png" alt="canada-cityline-illustration-by-loogart" title="Canada Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-ottawa.png" alt="ottawa-cityline-illustration-by-loogart" title="Ottawa Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-ottawa.png" alt="ottawa-cityline-illustration-by-loogart" title="Ottawa Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-gatineau.png" alt="gatineau-cityline-illustration-by-loogart" title="Gatineau Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-gatineau.png" alt="gatineau-cityline-illustration-by-loogart" title="Gatineau Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-bogota.png" alt="bogota-cityline-illustration-by-loogart" title="Bogota Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-bogota.png" alt="bogota-cityline-illustration-by-loogart" title="Bogota Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-zurich.png" alt="zurich-cityline-illustration-by-loogart" title="Zurich Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-zurich.png" alt="zurich-cityline-illustration-by-loogart" title="Zurich Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-new-york-city.png" alt="new-york-cityline-illustration-by-loogart" title="New York Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-new-york-city.png" alt="new-york-cityline-illustration-by-loogart" title="New York Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-los-angeles.png" alt="los-angeles-cityline-illustration-by-loogart" title="Los Angelex Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-los-angeles.png" alt="los-angeles-cityline-illustration-by-loogart" title="Los Angelex Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell"></div>
                     </div>
@@ -186,28 +189,28 @@
                 <div class="carousel">
                     <div class="montreal-carousel" data-flickity='{ "freeScroll": true }'>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-lavolley.png" alt="la-volley-cityline-illustration-by-loogart" title="LaVolley Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-lavolley.png" alt="la-volley-cityline-illustration-by-loogart" title="LaVolley Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreall.png" alt="montreall-cityline-illustration-by-loogart" title="Montreall.com Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreall.png" alt="montreall-cityline-illustration-by-loogart" title="Montreall.com Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-joyce-and-chris-wedding.png" alt="wedding-joyce-and-chris-cityline-illustration-by-loogart" title="Joyce and Chris' Wedding Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-joyce-and-chris-wedding.png" alt="wedding-joyce-and-chris-cityline-illustration-by-loogart" title="Joyce and Chris' Wedding Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreal-original.png" alt="montreal-original-cityline-illustration-by-loogart" title="2013 Original Montreal Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreal-original.png" alt="montreal-original-cityline-illustration-by-loogart" title="2013 Original Montreal Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreal-original-black.png" alt="montreal-original-black-cityline-illustration-by-loogart" title="2013 Original Montreal Black Edition Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreal-original-black.png" alt="montreal-original-black-cityline-illustration-by-loogart" title="2013 Original Montreal Black Edition Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreal-black.png" alt="montreal-black-edition-illustration-by-loogart" title="Montreal Black Edition Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreal-black.png" alt="montreal-black-edition-illustration-by-loogart" title="Montreal Black Edition Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreal-green.png" alt="montreal-green-edition-illustration-by-loogart" title="Montreal Green Edition Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreal-green.png" alt="montreal-green-edition-illustration-by-loogart" title="Montreal Green Edition Cityline Illustration by Loogart">
                         </div>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/cityline-montreal-pink.png" alt="montreal-pink-edition-illustration-by-loogart" title="Montreal Pink Edition Cityline Illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/citylines/cityline-montreal-pink.png" alt="montreal-pink-edition-illustration-by-loogart" title="Montreal Pink Edition Cityline Illustration by Loogart">
                         </div>
 
                         <div class="carousel-cell"></div>
