--- a/about.html
+++ b/about.html
@@ -8,7 +8,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Loogart is a visual design studio that specializes in illustration, brand identity, small-scale animation and web design. Our work is featured in Montreal, Toronto, Ottawa and Gatineau.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta property="og:title" content="Loogart">
+    <meta property="og:description" content="Montreal-based Visual Design Studio">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/img/loogart-screenshot.jpg">
+    <link rel="icon" href="favicon.ico">
 
     <title>About | Loogart</title>
 
