--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Illustrations of Montreal City, Quebec City and Quebe Province cityscapes for opening stores in Quebec. Design by Loogart and art-direction by BBDO.">
+    <meta name="description" content="Illustrations of Montreal City, Quebec City and Quebec Province cityscapes for opening stores in Quebec. Design by Loogart and art direction by BBDO.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta property="og:title" content="CityLines by Loogart">
+    <meta property="og:description" content="llustrations of cityscapes and skylines of various cities.">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/img/starbucks_door2.jpg">
+    <link rel="icon" href="favicon.ico">
 
     <title>Starbucks Opening Stores Cityscape Illustrations | Loogart</title>
 
@@ -16,6 +20,7 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/font-awesome.css" rel="stylesheet">
     <link href="../css/zoom.css" rel="stylesheet">
+    <link href="../css/flickity.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -52,87 +57,113 @@
     </nav>
 
     <!-- champion image -->
-    <div class="project-jumbotron project-starbucks-img"></div>
+    <div class="project-jumbotron project-starbucks-img">
+        <div class="col-sm-4 col-sm-offset-4 text-center">
+        </div>
+    </div>
 
 
-    <div class="container">
 
-        <!-- Jumbotron section -->
+    <div class="container-fluid">
 
+        <!-- back to home page -->
         <div class="row">
-            <div class="container">
+            <div class="col-md-6 col-md-offset-3">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>Starbucks Opening Stores by Loogart</h1>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
 
-
-        <!-- Portfolio section -->
-
+        <!-- Content section -->
         <section class="portfolio-content">
 
+            <!-- First section: Starbucks Montreal -->
             <div class="row">
-
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks_logo.png" style="width:200px">
-                    <h3>Company Logo</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
+                <div class="col-md-6 col-md-offset-3">
+                    <img class="img-responsive" src="../img/Starbucks_logo.png" style="max-width:100px;margin:30px 0">
+                    <h1>Starbucks Cityscapes</h1>
+                    <p>Starbucks was looking for elegant and locally relevant visuals which would be used as marketing materials for all the opening stores in Quebec, specifically in Montreal, Quebec City and several other towns within the province.</p>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-coffee-beans-photography.jpg" data-action="zoom">
-                    <h3>Graphic texture behind illustration</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
-                </div>
-                <div class="col-sm-12">
-                    <h3>Cityscape illustrations created by Loogart</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-montreal-city-by-loogart.jpg" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-quebec-city-by-loogart.jpg" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-quebec-province-by-loogart.jpg" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/starbucks-artwork-opening-stores.jpg" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                </div>
-
-
             </div>
-
-        </section>
-
-
-        <!-- Portfolio scroller section -->
-
-        <section class="portfolio-content">
             <div class="row">
-                <div class="container">
-                    <h3>Scroller for images</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
-                    <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/starbucks_door.JPG">
-                        <img class="img-portfolio-scroller" src="../img/starbucks_door2.JPG">
-                        <img class="img-portfolio-scroller" src="../img/starbucks_door3.JPG">
-                        <img class="img-portfolio-scroller" src="../img/starbucks-billboard.jpg">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
-                        <img class="img-portfolio-scroller" src="">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>The three Cityscapes</h3>
+                    <p>The three cityscapes were created with a handcrafted painbrush look, with layers of green derived from the Starbucks color palette and with whimsical characters interacting with coffee made by Starbucks.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="carousel">
+                    <div class="sb-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell"></div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks-montreal.png" alt="stabucks-montreal-cityscape-by-loogart" title="Montreal cityscape illustration for Starbucks by Loogart">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks-quebec.png" alt="stabucks-quebec-city-cityscape-by-loogart" title="Quebec City cityscape illustration for Starbucks by Loogart">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks-generic.png" alt="stabucks-quebec-towns-cityscape-by-loogart" title="Quebec towns cityscape illustration for Starbucks by Loogart">
+                        </div>
+                        <div class="carousel-cell"></div>
                     </div>
                 </div>
             </div>
+
+            <!-- Second section: Other Cities CityLines -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>Layered design</h3>
+                    <p>The cityscapes were then superimposed onto photographs of three different forms of coffee: latte, coffee bean and espresso. This created the underlying design of the marketing text.</p>
+                    <img class="img-responsive img-portfolio sb-hover" src="../img/portfolio/starbucks/starbucks-artwork-2.jpg" data-action="zoom">
+                    <p> Additionally, I created 3 custom icons of a mug, a coffee bean and a cup to be used with the text.</p>
+                    <img class="img-responsive img-portfolio sb-hover" src="../img/portfolio/starbucks/3icons.jpg" data-action="zoom">
+                    <p>The final artwork will include the coffee pattern photography, the cityscape illustrations, the icons, text written in a combination of two fonts dressed in white and the company logo.</p>
+                    <img class="img-responsive img-portfolio sb-hover" src="../img/portfolio/starbucks/starbucks-artwork-3.jpg" data-action="zoom">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>On the streets</h3>
+                    <p>Photography of several installations with the Starbucks Opening Stores artwork in the Montreal area.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="carousel">
+                    <div class="sb-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks_door2.jpg" alt="starbucks-montreal-door-by-loogart" title="Marketing of Starbucks Cityscape in Montreal by Loogart installed on door">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks_door.jpg" alt="starbucks-montreal-door-by-loogart" title="Marketing of Starbucks Cityscape in Montreal by Loogart installed on door">
+                        </div>
+
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks_door3.jpg" alt="starbucks-montreal-door-by-loogart" title="Marketing of Starbucks Cityscape in Montreal by Loogart installed on door">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks_door4.jpg" alt="starbucks-montreal-door-by-loogart" title="Marketing of Starbucks Cityscape in Montreal by Loogart installed on door">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/starbucks/starbucks-billboard.jpg" alt="starbucks-montreal-billboard-by-loogart" title="Marketing billboard of Starbucks Cityscape in Montreal by Loogart">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- fourth section: Story about artwork -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>Art directed by BBDO</h3>
+                    <p>Starbucks has illustrators and designers communicate their brand through art. Artwork needs to be created based on Starbucks' visual principles: artful, elevated, layered, handcrafted, whimsical, experiential and derived from culture.</p>
+                    <p>We worked with BBDO very closely to produce the perfect visual balance for these pieces of art which would be used as a marketing vehicle for new stores being setup in cities within the Quebec provice.</p>
+                </div>
+
+            </div>
+
         </section>
 
-        <!-- in-portfolio navigation -->
-
+        <!-- back to home page -->
         <div class="row">
             <div class="container">
                 <p class="cta-back">
@@ -143,6 +174,7 @@
 
     </div>
     <!-- /container -->
+
 
     <!-- footer -->
     <footer>
@@ -194,6 +226,8 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/zoom.min.js"></script>
+    <script src="../js/flickity.pkgd.min.js"></script>
+
     <script src="../js/loogart.js"></script>
 </body>
 
