--- a/projects/ets-cityline-illustration.html
+++ b/projects/ets-cityline-illustration.html
@@ -8,7 +8,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Illustration of Ecole de technologie supérieure's CityLine for marketing materials, apparel and social media use.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="author" content="Chris Soueidan of Loogart">
+    <meta property="og:title" content="CityLines by Loogart">
+    <meta property="og:description" content="CityLine illustration for Ecole de technologie supérieure in Montreal">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/img/ets/..jpg">
+    <link rel="icon" href="favicon.ico">
 
     <title>ÉTS CityLine Illustration | Loogart</title>
 
@@ -53,87 +58,69 @@
 
     <!-- champion image -->
     <div class="project-jumbotron project-ets-cityline-img">
-
-
+        <div class="col-sm-4 col-sm-offset-4 text-center">
+        </div>
     </div>
 
 
-    <div class="container">
 
-        <!-- Jumbotron section -->
+    <div class="container-fluid">
 
+        <!-- back to home page -->
         <div class="row">
-            <div class="container">
+            <div class="col-md-6 col-md-offset-3">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>ÉTS CityLine Illustration</h1>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
 
-
-        <!-- Portfolio section -->
-
+        <!-- Content section -->
         <section class="portfolio-content">
 
+            <!-- First section: Starbucks Montreal -->
             <div class="row">
-
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/ets-logo.jpg" style="width:200px">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
+                <div class="col-md-6 col-md-offset-3">
+                    <img class="img-responsive" src="../img/ets-logo.jpg" style="max-width:100px;margin:30px 0">
+                    <h1>ÉTS CityLine Illustration</h1>
+                    <p>The Ecole de Technologie Supérieure in Montreal commissioned Loogart to create a CityLine illustration of its most popular landmarks and elements. The university selected all items included in the design. The exercise was to ensure that the overall design stayed true to the ETS brand while coinciding with the CityLine style by Loogart.</p>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
-                </div>
-                <div class="col-sm-12">
-                    <h3>Title Full</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                </div>
-
-
             </div>
-
-        </section>
-
-
-        <!-- Portfolio scroller section -->
-
-        <section class="portfolio-content">
             <div class="row">
-                <div class="container">
-                    <h3>Photography of final project</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
-                    <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
+                <div class="carousel">
+                    <div class="ets-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell"></div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/ets/ets-cityline-full.jpg" alt="stabucks-montreal-cityscape-by-loogart" title="Montreal cityscape illustration for Starbucks by Loogart">
+                        </div>
+                        <div class="carousel-cell"></div>
                     </div>
                 </div>
             </div>
+
+            <!-- Second section: Other Cities CityLines -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>Snapchat filter</h3>
+                    <p>The illustration is destined to be part of the University's social media campaign, more specifically Facebook and Snapchat. Using the Snapchat geofilter feature, the University will be able to engage more students in its programs and activities.</p>
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/ets/ets-phone-mockup.png" data-action="zoom">
+                    <p>The Cityline is also produced on University apparel sold onsite such as shirts and mugs.</p>
+                    <img class="img-responsive" src="../img/portfolio/ets/ets-apparel.jpeg" data-action="zoom">
+                </div>
+            </div>
+
+            <!-- fourth section: Story about artwork -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>Innovation</h3>
+                    <p>The ETS differentiate themselves by tailoring their brand to a bold and fresh look which helps them gain traction for student recruitment and increases existing student interaction.</p>
+                </div>
+
+            </div>
+
         </section>
 
-        <!-- in-portfolio navigation -->
-
+        <!-- back to home page -->
         <div class="row">
             <div class="container">
                 <p class="cta-back">
@@ -144,6 +131,7 @@
 
     </div>
     <!-- /container -->
+
 
     <!-- footer -->
     <footer>
@@ -195,6 +183,8 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/zoom.min.js"></script>
+    <script src="../js/flickity.pkgd.min.js"></script>
+
     <script src="../js/loogart.js"></script>
 </body>
 
