--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="CityLines by Loogart">
     <meta property="og:description" content="llustrations of cityscapes and skylines of various cities.">
     <meta property="og:url" content="http://loogart.com/">
-    <meta property="og:image" content="http://loogart.com/version2/img/starbucks_door2.jpg">
+    <meta property="og:image" content="http://loogart.com/version2/img/starbucks/starbucks_door2.jpg">
     <link rel="icon" href="favicon.ico">
 
     <title>Starbucks Opening Stores Cityscape Illustrations | Loogart</title>
@@ -115,11 +115,11 @@
                 <div class="col-md-6 col-md-offset-3">
                     <h3>Layered design</h3>
                     <p>The cityscapes were then superimposed onto photographs of three different forms of coffee: latte, coffee bean and espresso. This created the underlying design of the marketing text.</p>
-                    <img class="img-responsive img-portfolio sb-hover" src="../img/portfolio/starbucks/starbucks-artwork-2.jpg" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/starbucks/starbucks-artwork-2.jpg" data-action="zoom">
                     <p> Additionally, I created 3 custom icons of a mug, a coffee bean and a cup to be used with the text.</p>
-                    <img class="img-responsive img-portfolio sb-hover" src="../img/portfolio/starbucks/3icons.jpg" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/starbucks/3icons.jpg" data-action="zoom">
                     <p>The final artwork will include the coffee pattern photography, the cityscape illustrations, the icons, text written in a combination of two fonts dressed in white and the company logo.</p>
-                    <img class="img-responsive img-portfolio sb-hover" src="../img/portfolio/starbucks/starbucks-artwork-3.jpg" data-action="zoom">
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/starbucks/starbucks-artwork-3.jpg" data-action="zoom">
                 </div>
             </div>
             <div class="row">
@@ -154,8 +154,8 @@
             <!-- fourth section: Story about artwork -->
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h3>Art directed by BBDO</h3>
-                    <p>Starbucks has illustrators and designers communicate their brand through art. Artwork needs to be created based on Starbucks' visual principles: artful, elevated, layered, handcrafted, whimsical, experiential and derived from culture.</p>
+                    <h3>Art direction by BBDO</h3>
+                    <p>Starbucks illustrators and designers communicate its brand through art. Artwork needs to be created based on Starbucks' visual principles: artful, elevated, layered, handcrafted, whimsical, experiential and derived from culture.</p>
                     <p>We worked with BBDO very closely to produce the perfect visual balance for these pieces of art which would be used as a marketing vehicle for new stores being setup in cities within the Quebec provice.</p>
                 </div>
 
