fixed code for go image

--- a/projects/ets-cityline-illustration.html
+++ b/projects/ets-cityline-illustration.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="CityLines by Loogart">
     <meta property="og:description" content="CityLine illustration for Ecole de technologie supérieure in Montreal">
     <meta property="og:url" content="http://loogart.com/">
-    <meta property="og:image" content="http://loogart.com/version2/img/ets/..jpg">
+    <meta property="og:image" content="http://loogart.com/version2/portfolio/img/ets/..jpg">
     <link rel="icon" href="favicon.ico">
 
     <title>ÉTS CityLine Illustration | Loogart</title>
