--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -8,8 +8,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Illustrations of Montreal City, Quebec City and Quebec Province cityscapes for opening stores in Quebec. Design by Loogart and art direction by BBDO.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <meta property="og:title" content="CityLines by Loogart">
-    <meta property="og:description" content="llustrations of cityscapes and skylines of various cities.">
+    <meta property="og:title" content="Starbucks Cityscapes by Loogart">
+    <meta property="og:description" content="llustrations of Quebec cities for Starbucks Opening Stores">
     <meta property="og:url" content="http://loogart.com/">
     <meta property="og:image" content="http://loogart.com/version2/img/portfolio/starbucks/starbucks_door2.jpg">
     <link rel="icon" href="favicon.ico">
